--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
 [workspace]
-members = ["contracts/*", "packages/*"]
+members = [
+    "contracts/*", 
+    "packages/*"
+]
+
+resolver = "2"
 
 [workspace.package]
 version = "0.1.0"
@@ -22,8 +27,8 @@ cw721-metadata-onchain  = "0.15.0"
 
 schemars                = "0.8.11"
 thiserror               = "1.0.38"
-serde                   = { version = "1.0.152", default-features = false, features = ["derive"] }
 
+serde                   = { version = "1.0.152", default-features = false, features = ["derive"] }
 fish_common             = { path = "packages/common" }
 
 
